<resources>
    <string name="app_name">Furniture App</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="email">Email</string>
    <string name="log_back_into_your_account">Log back into your account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="create_account">Create account</string>
    <string name="tochkago">..................</string>
    <string name="passwordqo">Password</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="emaill">Email</string>
    <string name="john_doe">John Doe</string>
    <string name="full_name">Full name</string>
    <string name="sign_up_and_start_shopping">Sign up and start shopping</string>
    <string name="create_accaunt">Create accaunt</string>
    <string name="to_explore_today">to explore today</string>
    <string name="you_need">You need</string>
</resources>